dataset1235/2025-2/1153765216/users/896391410/executions/2747719322_1626817775.log
== SUBMISSION (2025-08-19 19:40:38)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

import math

raio = float(input ("Digie o valor do raio:"))

area = math.pi * raio ** 2

volume = (4/3) * math.pi * raio ** 3 

print(round(area , 3))
print(round(volume , 3))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
---- user output:
0.004
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
381.704
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
7871.076
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
---- user output:
5575.28
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
---- user output:
1279110.151
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
---- user output:
33.51
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 19:39:28)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

import math

raio = float(input ("Digie o valor do raio:"))

volume = (4/3) * math.pi * raio ** 3 

print(round(area , 3))
print(round(volume , 3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    print(round(area , 3))
                ^^^^
NameError: name 'area' is not defined
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    print(round(area , 3))
                ^^^^
NameError: name 'area' is not defined
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    print(round(area , 3))
                ^^^^
NameError: name 'area' is not defined
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    print(round(area , 3))
                ^^^^
NameError: name 'area' is not defined
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    print(round(area , 3))
                ^^^^
NameError: name 'area' is not defined
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    print(round(area , 3))
                ^^^^
NameError: name 'area' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 19:38:04)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

import math

rolo = math.pi * raio ** 2

volume = (4/3) * math.pi * raio ** 3 

print(round(area , 3))
print(round(volume , 3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    rolo = math.pi * raio ** 2
                     ^^^^
NameError: name 'raio' is not defined
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    rolo = math.pi * raio ** 2
                     ^^^^
NameError: name 'raio' is not defined
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    rolo = math.pi * raio ** 2
                     ^^^^
NameError: name 'raio' is not defined
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    rolo = math.pi * raio ** 2
                     ^^^^
NameError: name 'raio' is not defined
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    rolo = math.pi * raio ** 2
                     ^^^^
NameError: name 'raio' is not defined
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    rolo = math.pi * raio ** 2
                     ^^^^
NameError: name 'raio' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 19:38:25)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

import math

raio = math.pi * raio ** 2

volume = (4/3) * math.pi * raio ** 3 

print(round(area , 3))
print(round(volume , 3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    raio = math.pi * raio ** 2
                     ^^^^
NameError: name 'raio' is not defined
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    raio = math.pi * raio ** 2
                     ^^^^
NameError: name 'raio' is not defined
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    raio = math.pi * raio ** 2
                     ^^^^
NameError: name 'raio' is not defined
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    raio = math.pi * raio ** 2
                     ^^^^
NameError: name 'raio' is not defined
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    raio = math.pi * raio ** 2
                     ^^^^
NameError: name 'raio' is not defined
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    raio = math.pi * raio ** 2
                     ^^^^
NameError: name 'raio' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 19:37:12)
-- CODE: 
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

import math
rolo = math.pi * raio ** 2

volume = (4/3) * math.pi * raio ** 3 

print(round(area , 3))
print(round(volume , 3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    rolo = math.pi * raio ** 2
                     ^^^^
NameError: name 'raio' is not defined
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    rolo = math.pi * raio ** 2
                     ^^^^
NameError: name 'raio' is not defined
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    rolo = math.pi * raio ** 2
                     ^^^^
NameError: name 'raio' is not defined
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    rolo = math.pi * raio ** 2
                     ^^^^
NameError: name 'raio' is not defined
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    rolo = math.pi * raio ** 2
                     ^^^^
NameError: name 'raio' is not defined
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    rolo = math.pi * raio ** 2
                     ^^^^
NameError: name 'raio' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
